--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="E:\Personal\2_Web Dev\Web Development Projects\HTML - Personal Site\HTML - Personal site\images\Mohammed Azzam Image.png" alt="Mohammed Azzam Pic"></td>
+      <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQEyPHpqm8-rww/profile-displayphoto-shrink_100_100/0/1544016900258?e=1660176000&v=beta&t=jDBBRmqXR4_Y1WlesheYhXOIHPIrS9IXTiNGrLIFQi0" alt="Mohammed Azzam Pic"></td>
       <td>
         <h1>Mohammed Azzam,PMP</h1>
         <p><em>IBS <strong>PMO</strong></em></p>
