--- a/Contact-me.html
+++ b/Contact-me.html
@@ -3,36 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Contact me</title>
+  <title></title>
 </head>
 
 <body>
-  <h1>Email Addr: m.s.azzam@hotmail.com</h1>
-  <p>My work address is, Tatweer building Floor6</p>
-  <p>Mob# 0506247219</p>
-  <h3>Register to receive our News Letter</h3>
-  <form class="" action="index.html" method="post">
-    <label> Your Name:</label>
-    <input type="text" name="" value=""><br>
-    <label> Password:</label>
-    <input type="password" name="" value="">
-    <input type="submit" name="" value="submit">
-    <input type="checkbox" name="" value=""><label>I'm not a Robot</label><br>
-    <br>
-    <label>Date of Birth </label><input type="date" name="" value="">
-    <label> Month </label><input type="month" name="" value=""><br>
-    <input type="text" name="" value="" size="30">
-    <input type="range" name="" value="">
-
-
-    <br>
-
-    Copyright (c) 2022 Copyright Holder All Rights Reserved.
+  <h1> My Contcat Details </h1>
+  <p>My Web address</p><br>
+  <p>m.s.azzam</p><br>
+  <hr>
+  <form  action="mailto:m.s.azzam@hotmail.com" method="post" enctype="text/plain">
+    <label>Your Name: </label><input type="text" name="" value=""><br>
+    <label>Your Name: </label><input type="email" name="" value=""><br>
+    <label>Your message: </label><br>
+    <textarea name="name" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
 
   </form>
-  <!-- REVIEW:  -->
 
-  <a href="index.html">Back</a>
 </body>
 
 </html>
