--- a/Contact-me.html
+++ b/Contact-me.html
@@ -9,7 +9,7 @@
 <body>
   <h1> My Contcat Details </h1>
   <p>My Web address</p><br>
-  <p>m.s.azzam</p><br>
+  <p>m.s.azzam@hotmail.com</p><br>
   <hr>
   <form  action="mailto:m.s.azzam@hotmail.com" method="post" enctype="text/plain">
     <label>Your Name: </label><input type="text" name="" value=""><br>
