Contact Page update

--- a/Contact-me.html
+++ b/Contact-me.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-  <h1> My Contcat Details </h1>
-  <p>My Web address</p><br>
-  <p>m.s.azzam@hotmail.com</p><br>
+  <h1> My Contcat Details </h1><br>
+  <h1>Email Addr: m.s.azzam@hotmail.com</h1>
+  <p>My work address is, Tatweer building Floor6</p>
+  <p>Mob# 0506247219</p>
   <hr>
+   <h1>Contact me</h1><br>
   <form  action="mailto:m.s.azzam@hotmail.com" method="post" enctype="text/plain">
     <label>Your Name: </label><input type="text" name="" value=""><br>
     <label>Your Name: </label><input type="email" name="" value=""><br>
